# ransac

./: .gitignore  CMakeLists.txt  README.md
include/: base_compute_model.hpp  files.hpp  ransac.hpp  test_ransac.hpp
include/base/: base_compute_error.hpp  base_compute_model.hpp
include/cilindrical/: focal.hpp
include/homography/: compute_homography_error.hpp  compute_homography_model.hpp  homography.hpp  homography_measurement.hpp  homography_model.hpp
include/test/: test_ransac.hpp
include/utils/: compute_iterations.hpp  fast_sample.hpp  files.hpp
src/: files.cpp  homography.cpp  main.cpp  test.cpp
src/cilindrical/: focal.cpp
src/cylindrical/: focal.cpp  warper.cpp
src/homography/: compute_homography_error.cpp  compute_homography_model.cpp  homography.cpp  homography_measurement.cpp  homography_model.cpp
src/test/: test.cpp
src/utils/: compute_iterations.hpp  files.cpp
